# Transformers-HuggingFace-ASR

./: README.md
projectTransformers/: README.md  pyproject.toml
projectTransformers/projecttransformers/: models-ASR.py
