[tool.poetry]
name = "projecttransformers"
version = "0.1.0"
description = ""
authors = ["AlexanderG1999 <95202925+AlexanderG1999@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.26.1"
soundfile = "^0.11.0"
librosa = "^0.9.2"
huggingsound = "^0.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
